# crunchize

./: .gitignore  README.md  batch_proxy.py  config.yml  exr_proxy.py  job_config.yml  mp4_proxy.py  pyproject.toml
config/: demo_workflow.yml
playbooks/: demo_workflow.yml  example.yml  plates_thumbnails.yml
playbooks/examples/: 01_basic_conversion.yml  02_proxy_generation.yml  03_review_video.yml  04_thumbnails.yml  05_ocio_display.yml  06_slates_only.yml  07_vfx_dailies.yml  08_qc_check.yml  09_sequence_reroot.yml  10_multi_shot_batch.yml  11_burnin_simple.yml  12_handoff_package.yml
scripts/: generate_test_sequence.sh
src/crunchize/: cli.py  engine.py
src/crunchize/tasks/: base.py  convert.py  delete.py  ffmpeg.py  filein.py  oiio.py  pathmap.py
src/crunchize/tasks/convert/: README.md  __init__.py  convert.py
src/crunchize/tasks/delete/: README.md  __init__.py
src/crunchize/tasks/ffmpeg/: README.md  __init__.py  ffmpeg.py
src/crunchize/tasks/filein/: README.md  __init__.py  filein.py
src/crunchize/tasks/inscribe/: README.md  __init__.py  inscribe.py
src/crunchize/tasks/oiio/: README.md  __init__.py  oiio.py
src/crunchize/tasks/parsepath/: README.md  __init__.py  parsepath.py
src/crunchize/tasks/pathmap/: README.md  __init__.py  pathmap.py
src/crunchize/tasks/thumbnail/: README.md  __init__.py  thumbnail.py
