[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crunchize"
version = "0.1.0"
description = "Ansible-inspired batch image processing framework"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [
  { name = "Crunchize Team", email = "info@crunchize.io" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "PyYAML",
  "opencolorio",
  "click",
]

[project.scripts]
crunchize = "crunchize.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/crunchize"]
